--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "d3": "^7.1.1",
+    "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
