Update main page & integrate Vuex

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "d3": "^7.1.1",
+    "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
