Redesign chart and update pages

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.1.1",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
+    "techan-js": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
